DataViews: Fix unnecessary horizontal scrollbar in list layout (#62448)

--- a/packages/dataviews/src/style.scss
+++ b/packages/dataviews/src/style.scss
@@ -436,6 +436,7 @@
 			.components-button {
 				opacity: 0;
 				position: fixed;
+				right: 0;
 			}
 		}
 
